Reuse ModuleBootstrap.boot2()